<resources>
    <string name="app_name">Meals App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_mealsList">Meals List</string>
    <string name="title_shopping_card">Shopping Card</string>
    <string name="title_add_meals">Add Meals</string>
    <string name="lbl_forgot_password">Forgot Password !</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="MealTitle">Meal Title</string>
    <string name="MealDescription">Meal Description</string>
    <string name="AddMeal">Add Meal</string>
    <string name="AddToCard">Add to card</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="user_roles">
        <item>Admin</item>
        <item>Guest</item>
    </string-array>
</resources>