<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_meals_list">

    <fragment
        android:id="@+id/navigation_meals_list"
        android:name="com.example.mealsapp.presentation.ui.fragment.MealsListFragment"
        android:label="@string/title_mealsList"
        tools:layout="@layout/fragment_meals_list" >
        <action
            android:id="@+id/action_navigation_meals_list_to_navigation_shopping_card"
            app:destination="@id/navigation_shopping_card" />
        <action
            android:id="@+id/action_navigation_meals_list_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shopping_card"
        android:name="com.example.mealsapp.presentation.ui.fragment.ShoppingCardFragment"
        android:label="@string/title_shopping_card"
        tools:layout="@layout/fragment_shopping_card" />

    <fragment
        android:id="@+id/navigation_add_meals"
        android:name="com.example.mealsapp.presentation.ui.fragment.AddMealsFragment"
        android:label="@string/title_add_meals"
        tools:layout="@layout/fragment_add_meals" >
        <action
            android:id="@+id/action_navigation_add_meals_to_navigation_meals_list"
            app:destination="@id/navigation_meals_list" />
    </fragment>

    <fragment
        android:id="@+id/mealDetailsFragment"
        android:name="com.example.mealsapp.presentation.ui.fragment.MealDetailsFragment"
        android:label="fragment_meal_details"
        tools:layout="@layout/fragment_meal_details" >
        <argument
            android:name="meal"
            app:argType="com.example.mealsapp.domain.model.Meal" />

    </fragment>

</navigation>